Moving the background color of the text views to the Category style file

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,8 +12,7 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,21 +24,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/category_numbers">
+
         <TextView
             android:id="@+id/numbers"
             style="@style/CategoryStyle"
-            android:text="@string/category_numbers"
-            android:background="?android:attr/selectableItemBackground"/>
+            android:text="@string/category_numbers" />
     </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/category_family">
+
         <TextView
             android:id="@+id/family"
             style="@style/CategoryStyle"
-            android:background="?android:attr/selectableItemBackground"
             android:text="@string/category_family" />
     </FrameLayout>
 
@@ -48,10 +46,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/category_colors">
+
         <TextView
             android:id="@+id/colors"
             style="@style/CategoryStyle"
-            android:background="?android:attr/selectableItemBackground"
             android:text="@string/category_colors" />
     </FrameLayout>
 
@@ -59,10 +57,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/category_phrases">
+
         <TextView
             android:id="@+id/phrases"
             style="@style/CategoryStyle"
-            android:background="?android:attr/selectableItemBackground"
             android:text="@string/category_phrases" />
     </FrameLayout>
 
